deploy/syncing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: "ghcr.io/cit-nclab/mo12-hp:67f8742ac80babc80ce301cc4a65cc51ad225469"
